web/themes/custom/cloudy/scss/components/_media.scss
/**
 * @file
 * Media.
 * Media items, typically embedded.
 */

 // Bootstrap only sets max-width, not fully responsive?
.img-fluid {
  width: 100%;
}

// Figures
.figure {
  // Bootstrap uses inline-block which breaks our
  //  full width media sitting on top of each other
  @extend .d-flex;
  flex-direction: column;
  .figure-caption {
    color: $gray-900;
    margin-top: 0;
  }
}

.document-unpublished {
  margin-right: 10px;
}

.image-unpublished, .video-unpublished, .audio-unpublished {
  position: absolute;
  z-index: 1;
  margin: 5px;
}

.image-preview img.image-style-thumbnail {
  max-width: 100px;
}
/* "embed-image" and "embed-video" classes are added by filter portland_media_embed_helper_classes */
.embed-image.align-right {
    float: right;
    max-width: 50%;
    margin-left: 2rem;
}
.embed-image.responsive-right {
  float: right;
  max-width: 50%;
  margin-left: 2rem;
}
.embed-image.responsive-full {
  max-width: 100%;
}
.embed-video.align-right {
  width: 50%;
  margin-left: 2rem;
}

